Fixes the alignment on the social buttons in all responsive stylesheets

--- a/css/style-1000px.css
+++ b/css/style-1000px.css
@@ -30,7 +30,7 @@
 
 		.wrapper-style4 .row-special
 		{
-			margin: 2em 0 0 0;
+			margin: 2em 2em 0 0;
 			padding: 2em 0 2em 0;
 		}
 
