--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -118,7 +118,7 @@
 
 		.wrapper-style4 .row-special
 		{
-			margin: 4em 0 0 0;
+			margin: 4em 3em 0 0;
 			padding: 4em 0 4em 0;
 		}
 
